Issue #795 Upgrade entities library to Java 25